# GammaCamera

gammaCamera/step1_projection/version2_classes/: CMakeLists.txt  alice.C
gammaCamera/step1_projection/version2_classes/include/: camera.h  dataCamera.h  dataLandMark.h  dataObservation.h  databaseCamerasAndPoints.h  units.h
gammaCamera/step1_projection/version2_classes/src/: camera.C  dataCamera.C  dataLandMark.C  dataObservation.C  databaseCamerasAndPoints.C
gammaCamera/step2_trangulation/trangulation_version2/: CMakeLists.txt  alice.C  output.txt
gammaCamera/step2_trangulation/trangulation_version2/include/: dataObservation.h  processTriangulation.h
gammaCamera/step2_trangulation/trangulation_version2/src/: dataObservation.C  processTriangulation.C
